# joefx

./: CMakeLists.txt  jfx_parser.py  joefx.py  libjoefx.pc.cmake  passthrough.glslf  passthrough.glslv  passthrough.jfx
include/joefx/: Pass.hpp  Technique.hpp  context.hpp  effect.hpp  joefx.hpp  pass.hpp  state_assignment.hpp  technique.hpp
src/: context.cpp  effect.cpp  joefx.cpp  joefx.hpp  pass.cpp  state_assignment.cpp  technique.cpp
tests/test/: CMakeLists.txt  main.cpp
